# qr

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  config.json  docker-compose.yml  entrypoint.sh
api/: Cargo.toml  Dockerfile
api/src/: config.rs  main.rs  pages.rs
api/src/services/: health.rs  image.rs  mod.rs  qr.rs  redirect.rs  version.rs
api/templates/: _layout.css  _layout.html  create.html  delete.html  edit.html  index.html  legal_notice.html  privacy.html
entity/: Cargo.toml
entity/src/: prelude.rs  qr_code.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: Cargo.toml
service/: Cargo.toml
service/src/: lib.rs  qrcode.rs
