[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui", "uuid"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
