[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
service = { path = "../service" }
migration = { path = "../migration" }
entity = { path = "../entity" }
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui", "url", "uuid"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"
serde_json = "1.0.145"
thiserror = "2.0.16"
chrono = { version = "0.4.42", features = ["serde"] }
askama = { version = "0.14.0" }