[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
image = { version = "0.25.8", features = ["png"] }
qrcode = "0.14.1"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"

[dependencies.sea-orm]
version = "1.1.12" # sea-orm version
